--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,19 +1,14 @@
 .App {
-  text-align: center;
-}
+  text-align: center; }
 
 .App-header {
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
-}
+  color: white; }
 
 .App-title {
-  font-size: 1.5em;
-}
+  font-size: 1.5em; }
 
 .App-intro {
-  font-size: large;
-}
-
+  font-size: large; }
