refactor film text and favorites working

--- a/src/Components/CardContainer/CardContainer.scss
+++ b/src/Components/CardContainer/CardContainer.scss
@@ -2,4 +2,9 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
+  background-size: cover;
+  margin: 150px, 30px, 30px, 30px;
+  padding: 50px;
+  border: 3px solid gold;
+  background-color: rgba(0, 0, 0, 0.6)
 }
