--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,21 +1,12 @@
 .App {
-  text-align: center; }
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white; }
+  text-align: center;
+  display: flex;
+  background-image: url(https://i.ytimg.com/vi/voWpbz1De_M/maxresdefault.jpg);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh; }
 
 .App-title {
-  font-size: 1.5em; }
-
-.App-intro {
-  font-size: large; }
-
-.api-data {
-  display: flex;
-}
-
-.scroll-text {
-  position: left; }
+  font-size: 70pt;
+  letter-spacing: 0.5em; }
