--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -1,23 +1,20 @@
+
+
 .App {
   text-align: center;
-  // display: flex;
+  display: flex;
+  // flex-direction: column;
+  background-image: url(https://i.ytimg.com/vi/voWpbz1De_M/maxresdefault.jpg);
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100vh;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
+
 
 .App-title {
-  font-size: 1.5em;
+  font-size: 70pt;
+  letter-spacing: 0.5em;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-.Scroll-text {
-  position: left;
-}
