--- a/src/Components/CardContainer/CardContainer.css
+++ b/src/Components/CardContainer/CardContainer.css
@@ -1,4 +1,9 @@
 .card-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around; }
+  justify-content: space-around;
+  background-size: cover;
+  margin: 150px, 30px, 30px, 30px;
+  padding: 50px;
+  border: 3px solid gold;
+  background-color: rgba(0, 0, 0, 0.6); }
