--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -5,8 +5,4 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100vh; }
-
-.App-title {
-  font-size: 70pt;
-  letter-spacing: 0.5em; }
+  min-height: 100vh; }
