--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -8,13 +8,10 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 
 
-.App-title {
-  font-size: 70pt;
-  letter-spacing: 0.5em;
-}
+
 
