--- a/src/Components/CardContainer/CardContainer.css
+++ b/src/Components/CardContainer/CardContainer.css
@@ -3,7 +3,15 @@
   flex-wrap: wrap;
   justify-content: space-around;
   background-size: cover;
-  margin: 150px, 30px, 30px, 30px;
+  margin: 60px;
   padding: 50px;
   border: 3px solid gold;
   background-color: rgba(0, 0, 0, 0.6); }
+
+.card-container h2 {
+  color: #feda4a; }
+
+.card-container h4 {
+  font-size: 20px;
+  color: #51B353;
+  text-shadow: 0 0 1px #74F3A6; }
