--- a/src/Components/ScrollText/ScrollText.scss
+++ b/src/Components/ScrollText/ScrollText.scss
@@ -5,20 +5,20 @@
   color: #feda4a;
   display: flex;
   font-family: 'Pathway Gothic One', sans-serif;
-  height: 500px;
+  height: 200px;
   justify-content: center;
   letter-spacing: 6px;
   overflow: hidden;
   perspective: 350px;
   position: relative;
   text-align: justify;
-  width: 30%; 
+  // width: 30%; 
 }
 
 .scroll-container .scroll-text {
   animation: scroll-text 175s linear;
   // animation-iteration-count: infinite;
-  font-size: 40px;
+  font-size: 35px;
   position: relative;
   text-align: center;
   top: -100px;
