refactor for setDisplay

--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,3 +1,9 @@
 .nav-buttons {
+  border: none;
   height: 40px;
-  width: 120px; }
+  width: 120px;
+  transition: all 0.2s ease-in-out; }
+
+.nav-buttons:hover {
+  background-color: #6be395;
+  box-shadow: 5px 5px 15px rgba(107, 227, 149, 0.4); }
