--- a/src/Components/ScrollText/ScrollText.css
+++ b/src/Components/ScrollText/ScrollText.css
@@ -4,7 +4,10 @@
   color: #feda4a;
   display: flex;
   font-family: 'Pathway Gothic One', sans-serif;
-  height: 200px;
+  height: 500px;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
   justify-content: center;
   letter-spacing: 6px;
   overflow: hidden;
@@ -13,8 +16,8 @@
   text-align: justify; }
 
 .scroll-container .scroll-text {
-  animation: scroll-text 175s linear;
-  font-size: 35px;
+  animation: scroll-text 160s linear;
+  font-size: 40px;
   position: relative;
   text-align: center;
   top: -100px;
