--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -1,16 +1,26 @@
-
-
 .App {
   text-align: center;
   display: flex;
-  // flex-direction: column;
+  flex-direction: column;
+  align-items: center;
   background-image: url(https://i.ytimg.com/vi/voWpbz1De_M/maxresdefault.jpg);
   margin: 0;
   padding: 0;
   width: 100%;
   min-height: 100vh;
+  font-family: 'Helvetica';
 }
 
+.App-title {
+  font-size: 57pt;
+  letter-spacing: 0.5em;
+  color: #feda4a;
+  font-family: 'starjedi';
+}
+
+.App-container {
+  width: 100%
+}
 
 
 
