--- a/src/Components/Button/Button.css
+++ b/src/Components/Button/Button.css
@@ -1,9 +1,15 @@
 .nav-buttons {
+  background: none;
   border: none;
-  height: 40px;
-  width: 120px;
+  color: white;
+  font-size: 24pt;
+  font-weight: bold;
+  outline: #6be395;
+  height: 50px;
+  width: 175px;
   transition: all 0.2s ease-in-out; }
-
-.nav-buttons:hover {
-  background-color: #6be395;
-  box-shadow: 5px 5px 15px rgba(107, 227, 149, 0.4); }
+  .nav-buttons:hover {
+    background-color: #6be395;
+    box-shadow: 0px 0px 12px 12px rgba(107, 227, 149, 0.4); }
+  .nav-buttons .btn-count {
+    margin-left: 4px; }
