--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -1,19 +1,27 @@
 .card {
+  &.favorite {
+      box-shadow: 0px 0px 15px 15px rgba(67, 143, 238, .3)
+  }
   border: 2px solid white;
-  color: red;
   width: 300px;
-  margin-top: 15px;
+  margin-bottom: 30px;
   padding: 10px;
 }
 
-.favorite {
-  // background: none;
-  width: 100px;
+.favorite .favorite-btn {
+  background-color: rgb(67, 143, 238);
+  color: white;
+}
+
+.favorite-btn {
+  &:hover {
+    background-color: rgb(67, 143, 238);
+    box-shadow: 0px 0px 10px 10px rgba(67, 143, 238, .3);
+  }
+  font-size: 16pt;
+  height: 35px;
+  width: 150px;
   font-family: 'starjedi';
   border: none;
 }
 
-.favorite:hover {
-  background-color: rgb(67, 143, 238);
-  box-shadow: 5px 5px 15px rgba(67, 143, 238, .4);
-}
