--- a/src/Components/CardContainer/CardContainer.scss
+++ b/src/Components/CardContainer/CardContainer.scss
@@ -1,20 +1,32 @@
 .card-container {
+  border: 3px solid gold;
+  background-color: rgba(0, 0, 0, 0.6);
+  margin: 60px;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.category {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  background-size: cover;
-  margin: 60px;
-  padding: 50px;
-  border: 3px solid gold;
+  padding: 30px;
   background-color: rgba(0, 0, 0, 0.6)
+}
+
+.category-title {
+  font-size: 32pt;
 }
 
 .card-container h2 {
   color: #feda4a;
+  margin-bottom: 0px;
 }
 
 .card-container h4 {
   font-size: 20px;
-  color: #51B353;
+  color: rgb(118, 201, 120);
   text-shadow: 0 0 1px #74F3A6;
 }
