--- a/src/Components/ScrollText/ScrollText.scss
+++ b/src/Components/ScrollText/ScrollText.scss
@@ -1,33 +1,40 @@
 .scroll-container {
-  // background-image: url(https://i.ytimg.com/vi/_kaqhy2iV7c/maxresdefault.jpg);
   background-size: cover;
   background-position: center;
   color: #feda4a;
   display: flex;
   font-family: 'Pathway Gothic One', sans-serif;
-  height: 200px;
+  height: 500px;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
   justify-content: center;
   letter-spacing: 6px;
   overflow: hidden;
   perspective: 350px;
   position: relative;
   text-align: justify;
-  // width: 30%; 
 }
 
 .scroll-container .scroll-text {
-  animation: scroll-text 175s linear;
+  animation: scroll-text 160s linear;
   // animation-iteration-count: infinite;
-  font-size: 35px;
+  font-size: 40px;
   position: relative;
   text-align: center;
   top: -100px;
   transform-origin: 0% 0%;
   width: 80%; }
+
   .scroll-container .scroll-text h3 {
-    margin: 0px; }
+    margin: 0px; 
+  }
+
   .scroll-container .scroll-text h5 {
-    margin: 10px 0px; }
+    margin: 10px 0px; 
+  }
+
+
 
 @keyframes scroll-text {
   0% {
