update card title font

--- a/src/Components/Button/Button.scss
+++ b/src/Components/Button/Button.scss
@@ -7,6 +7,7 @@
     margin-left: 4px;
   }
   background: none;
+  background-color: rgba(0, 0, 0, 0.6);
   border: none;
   color: white;
   font-size: 26pt;
