--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -18,10 +18,10 @@
     background-color: rgb(67, 143, 238);
     box-shadow: 0px 0px 10px 10px rgba(67, 143, 238, .3);
   }
+  font-weight: bold;
   font-size: 16pt;
   height: 35px;
   width: 150px;
-  font-family: 'starjedi';
   border: none;
 }
 
