start app tests

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -4,5 +4,5 @@
 
 .buttons {
   display: flex;
-  justify-content: space-around;
-  width: 100%; }
+  justify-content: space-between;
+  width: 80%; }
