--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -5,6 +5,6 @@
 
 .buttons {
   display: flex;
-  justify-content: space-around;
-  width: 100%;
+  justify-content: space-between;
+  width: 80%;
 }
