--- a/src/Components/Card/Card.scss
+++ b/src/Components/Card/Card.scss
@@ -3,8 +3,8 @@
       box-shadow: 0px 0px 15px 15px rgba(67, 143, 238, .3)
   }
   border: 2px solid white;
-  width: 300px;
-  margin-bottom: 30px;
+  width: 283px;
+  margin: 0 20px 30px;
   padding: 10px;
 }
 
