--- a/src/Components/CardContainer/CardContainer.css
+++ b/src/Components/CardContainer/CardContainer.css
@@ -1,17 +1,14 @@
 .card-container {
-  border: 3px solid gold;
   background-color: rgba(0, 0, 0, 0.6);
-  margin: 60px;
   min-height: 400px;
-  display: flex;
   flex-direction: column;
   justify-content: center; }
 
 .category {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 30px;
+  margin: 30px auto;
+  width: 1292px;
   background-color: rgba(0, 0, 0, 0.3); }
 
 .category-title {
@@ -27,3 +24,15 @@
   font-size: 20px;
   color: #76c978;
   text-shadow: 0 0 1px #74F3A6; }
+
+@media screen and (max-width: 1291px) {
+  .category {
+    width: 969px; } }
+
+@media screen and (max-width: 968px) {
+  .category {
+    width: 646px; } }
+
+@media screen and (max-width: 645px) {
+  .category {
+    width: 323px; } }
