--- a/src/Components/CardContainer/CardContainer.scss
+++ b/src/Components/CardContainer/CardContainer.scss
@@ -1,9 +1,6 @@
 .card-container {
-  border: 3px solid gold;
   background-color: rgba(0, 0, 0, 0.6);
-  margin: 60px;
   min-height: 400px;
-  display: flex;
   flex-direction: column;
   justify-content: center;
 }
@@ -11,8 +8,8 @@
 .category {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 30px;
+  margin: 30px auto;
+  width: 1292px;
   background-color: rgba(0, 0, 0, 0.3)
 }
 
@@ -31,4 +28,22 @@
   font-size: 20px;
   color: rgb(118, 201, 120);
   text-shadow: 0 0 1px #74F3A6;
+}
+
+@media screen and (max-width: 1291px) {
+  .category {
+    width: 969px;
+  }
+}
+
+@media screen and (max-width: 968px) {
+  .category {
+    width: 646px;
+  }
+}
+
+@media screen and (max-width: 645px) {
+  .category {
+    width: 323px;
+  }
 }
