--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,7 @@
 .App-header {
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-around;
+  margin-bottom: 50px; }
 
 .buttons {
   display: flex;
