--- a/src/Components/App/App.scss
+++ b/src/Components/App/App.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url(https://i.ytimg.com/vi/voWpbz1De_M/maxresdefault.jpg);
+  background-image: url('../../backgroundStars.jpg');
   margin: 0;
   padding: 30px;
   width: 100%;
